# drawarrow

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  req.py  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml
.github/workflows/: doc.yml  test.yml
.streamlit/: config.toml
FAQ/: index.html
app/: Create_My_Arrow.py  ui.py
docs/: FAQ.md  index.md
docs/reference/: arrow_spines.md  ax_arrow.md  fig_arrow.md
docs/stylesheets/: style.css
drawarrow/: __init__.py  arrow_patch.py  arrow_spines.py  main.py  utils.py
logo/: logo.py  pizzadudedotdk.txt
overrides/partials/: footer.html
reference/arrow_spines/: index.html
reference/ax_arrow/: index.html
reference/fig_arrow/: index.html
search/: search_index.json
tests/: test_angle_calculations.py  test_arrow_spines.py  test_create_lots_of_arrows.py  test_drawarrow.py  test_find_stylename.py
