[project]
name = "drawarrow"
version = "0.0.2"
authors = [
  { name="Joseph Barbier", email="joseph.barbierdarnal@gmail.com" },
]
description = "Drawing arrows for matplotlib made easy."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Matplotlib"
]
dependencies = [
  "matplotlib"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/JosephBARBIERDARNAL/drawarrow"
Issues = "https://github.com/JosephBARBIERDARNAL/drawarrow/issues"
