[project]
name = "drawarrow"
version = "0.1.0"
description = "Drawing arrows for matplotlib made easy."
authors = [
  { name="Joseph Barbier", email="joseph.barbierdarnal@gmail.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Framework :: Matplotlib"
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib",
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.9",
    "mkdocs-matplotlib>=0.10.1",
    "mkdocstrings-python>=1.16.5",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
    "setuptools>=76.1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/JosephBARBIERDARNAL/drawarrow"
Issues = "https://github.com/JosephBARBIERDARNAL/drawarrow/issues"
